# goozy-cli

./: .gitignore  README.md  goozy.py  pyproject.toml
goozy/: goozy.py
